# dynamical_system_in_rust

./: .gitignore  Cargo.toml  README.md  para_plot.py  plot.py
main_program/: Cargo.toml
main_program/src/: calculation.rs  composite_system.rs  dynamical_system.rs  fitzhugh_nagumo.rs  global_parameter_map.rs  hindmarsh_rose.rs  history.rs  integration_methods.rs  lang_kobayashi.rs  lorenz.rs  mackey_glass.rs  main.rs  network.rs  parameter.rs  roessler.rs  stuart_landau.rs  timer.rs  var.rs
src/: analysis.rs  calculation.rs  composite_system.rs  curve_simplification.rs  dynamical_system.rs  history.rs  integration_methods.rs  integrator.rs  lang_kobayashi.rs  lorenz.rs  mackey_glass.rs  main.rs  network.rs  stuart_landau.rs
timeseries/: Cargo.toml
timeseries/src/: curve_simplification.rs  lib.rs  simplify_timeseries.rs
