[package]
name = "lorentz_attractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.0"
num-complex = "0.4.2"

[profile.release]
strip = true
lto = true
opt-level = "z"  # Optimize for size
